--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background: #f6f4f0; */
+  background: #9f9790;
 }
 
 code {
