--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background: #9f9790; */
-  background: #3e3d38;
+  background: #620500;
 }
 
 code {
